--- a/lagrange/lagrange.tex
+++ b/lagrange/lagrange.tex
@@ -4,7 +4,8 @@
 
 \documentclass[twoside=false, open=right, titlepage, numbers=noenddot, 
                headinclude, fontsize=10pt, paper=a4, footinclude, 
-               abstract=off, cleardoublepage=empty]{scrreprt}
+               abstract=off, cleardoublepage=empty
+               ]{scrreprt}
 
 \input{aux/docinfo}
 \RequirePackage{aux/minionstyle}
@@ -13,7 +14,7 @@
 \RequirePackage{aux/math}
 \RequirePackage{aux/physics}
 
-\hyphenation{non-dimen-sion-a-lize}
+\hyphenation{co-ordi-nate-in-de-pendent}
 
 \begin{document}
 
@@ -29,6 +30,7 @@
 
   %\include{doc/summary}
   \include{doc/action}
+  \include{doc/newtonian}
   \include{doc/lagrangian}
 
   \phantomsection
