--- a/lagrange/aux/lingo.sty
+++ b/lagrange/aux/lingo.sty
@@ -1,7 +1,7 @@
 % lingo
 % linguistic commands, environments and macros
 
-\ProvidesPackage{aux/lingo}[05/08/2014 linguistic macros and commands (rimbaudcode)]
+\ProvidesPackage{aux/lingo}[18/08/2014 linguistic macros and commands (rimbaudcode)]
 
 % General
 %
@@ -38,6 +38,7 @@
 \providecommand*{\quaevide}{\lingform{qq.v.}\xspace}              % plural of q.v.
 \providecommand*{\sic}{[\lingform{sic}]\xspace}                   % so or thus
 \providecommand*{\scilicet}{\lingform{sc.}\xspace}                % "one may know" same "videlicet"
+\providecommand*{\vide}{\lingform{vide}\xspace}                   % see!
 \providecommand*{\videinfra}{\lingform{v.i.}\xspace}              % see below
 \providecommand*{\videlicet}{\lingform{viz.}\xspace}              % that is to say, namely
 \providecommand*{\viz}{\lingform{viz.}\xspace}                    % that is to say, namely
