--- a/lagrange/aux/physics.sty
+++ b/lagrange/aux/physics.sty
@@ -23,19 +23,40 @@
 %
 % Lagrangian mechanics
 %
-\providecommand*{\action}{\aleph}      % action
-\providecommand*{\gmom}{p}             % generalized momentum
-\providecommand*{\gpos}{q}             % generalized position
-\providecommand*{\gvel}{\dt\gpos}      % generalized velocity
-\providecommand*{\elag}{\ener\txt{la}} % lagrangian
+\providecommand*{\cspace}{\set{C}} % configuration space
+%
+\providecommand*{\action}{\aleph} % action
+\providecommand*{\gmom}{p}        % generalized momentum
+\providecommand*{\gpos}{q}        % generalized position
+\providecommand*{\gvel}{\dt\gpos} % generalized velocity
+%
+\providecommand*{\ekin}{\ener\txt{kin}}  % kinetic energy
+\providecommand*{\epot}{\ener\txt{pot}}  % potential energy
+\providecommand*{\eham}{\ener\txt{ham}} % hamiltonian
+\providecommand*{\elag}{\ener\txt{lag}} % lagrangian
 %
 \providecommand*{\vpos}{\epsilon} % variational position
+%
+\providecommand*{\elop}[2]{\natural_{{#1}{#2}}} % Euler-Lagrange's operator
+%
+% explicit Euler-Lagrange equations
+% {pos}{vel}{lag}
+\providecommand*{\xeleq}[3]{\iod t\parth{\ipd{{#2}}{#3}} - \ipd{#1}{#3}} % 
+
+%%% Transport
+%
+\providecommand*{\npart}{n} % number of particles
+
+%%% Dimensional analysis
+%
+\providecommand*{\phdim}[1]{\mathsf{#1}} % physical dimension
 
 %%% Eng notation (Cartesian coordinates)
 %
 \providecommand*{\xpos}{x} % x-position
 
-
-%%% Dimensional analysis
+%%% Universal constants
 %
-\providecommand*{\phdim}[1]{\mathsf{#1}} % physical dimension
+\providecommand*{\uconst}[1]{k\txt{#1}} % general universal constant
+%
+\providecommand*{\uknewton}{\uconst{ne}} % Newton's gravitational constant
