sections added, typos correction

--- a/prob-solving/aux/docinfo.tex
+++ b/prob-solving/aux/docinfo.tex
@@ -1,7 +1,7 @@
 % docinfo
 
-\providecommand*{\docTitle}{The art of problem solving\xspace}
-\providecommand*{\docSubtitle}{...\xspace}
+\providecommand*{\docTitle}{Applied model theory\xspace}
+\providecommand*{\docSubtitle}{The art of math modeling\xspace}
 
 \providecommand*{\docAuthor}{Diego Herrera}
 \providecommand*{\docAuthorEmail}{office@simurgh.at}
@@ -21,6 +21,6 @@
 \providecommand*{\docYear}{2014\xspace}
 \providecommand*{\docToday}{\ddmmyyyydate\today}
 
-\providecommand*{\docVersion}{0.1.0} % change also doc history file!
+\providecommand*{\docVersion}{0.0.4} % change also doc history file!
 
 \providecommand*{\docKeywords}{place keywords here!}
