--- a/prob-solving/aux/halftitle.tex
+++ b/prob-solving/aux/halftitle.tex
@@ -5,7 +5,7 @@
 
 \begin{center}
 %
-  \minus{\docCompany} \\ \medskip
+  \minus{\docAuthor} \\ \medskip
   \begingroup
     \color{\docdivisioncolor}\mayus{\docTitle}
   \endgroup
