--- a/prob-solving/aux/lingo.sty
+++ b/prob-solving/aux/lingo.sty
@@ -35,6 +35,7 @@
 \providecommand*{\ie}{\lingform{i.e.}\xspace}                     % id est
 \providecommand*{\interalia}{\lingform{i.a.}\xspace}              % among other things
 \providecommand*{\nbene}[1]{\mgraffito{\lingform{N.B.}\,: {#1}}}  % pay attention
+\providecommand*{\QED}{\lingform{QED}}                            % quod erat demonstrandum
 \providecommand*{\quodvide}{\lingform{q.v.}\xspace}               % which to see
 \providecommand*{\quaevide}{\lingform{qq.v.}\xspace}              % plural of q.v.
 \providecommand*{\sic}{[\lingform{sic}]\xspace}                   % so or thus
