--- a/prob-solving/aux/math.sty
+++ b/prob-solving/aux/math.sty
@@ -1,7 +1,7 @@
 % math
 % math commands, environments and macros
 
-\ProvidesPackage{aux/math}[05/08/2014 math macros and commands (rimbaudcode)]
+\ProvidesPackage{aux/math}[23/08/2014 math macros and commands (rimbaudcode)]
 
 %%% General
 %
@@ -10,7 +10,7 @@
 %
 \providecommand*{\defas}{\doteq}               % is defined as
 \providecommand*{\parth}[1]{\left({#1}\right)} % parentheses
-\providecommand*{\eqtxt}[1]{[\text{#1}]}       % explanatory text in equations
+\providecommand*{\eqtxt}[1]{[\,\text{#1}\,]}   % explanatory text in equations
 \providecommand*{\txt}[1]{_\text{#1}}          % subscript text in math mode
 \providecommand*{\tuple}[1]{\left({#1}\right)} %
 \providecommand*{\vat}[1]{\!\left[{#1}\right]} % value (of a function) at a point
