--- a/prob-solving/aux/revision.tex
+++ b/prob-solving/aux/revision.tex
@@ -27,11 +27,13 @@ The following table describes the changes to \scare{\docTitle}.
 %
 \tabhead{Version} & \tabhead{Date} & {\tabhead{Notes}}\\
 %
-\rhEntry{0.0.1}{27/12/2013}{First release} \\
+\rhEntry{0.0.1}{20/08/2014}{First release} \\
 %
-\rhEntry{0.1.0}{05/08/2014}{Changes in libraries and file organization} \\
+\rhEntry{0.0.2}{21/08/2014}{Changes in text organization. Typo corrections} \\
 %
-\doclastrow\docVersion & \docToday & Current release \\
+\rhEntry{0.0.3}{22/08/2014}{Title and subtitle changed} \\
+%
+\doclastrow\docVersion & \docToday & Current document compilation \\
 %
 \bottomrule
 %
