--- a/prob-solving/doc/references.bib
+++ b/prob-solving/doc/references.bib
@@ -2,12 +2,64 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-08-21 12:26:11 +0200 
+%% Created for art at 2014-08-24 20:59:19 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{nsw:2000,
+	Author = {Department of Education and Training},
+	Date-Added = {2014-08-24 07:31:56 +0000},
+	Date-Modified = {2014-08-24 07:41:01 +0000},
+	Organization = {NSW Department of Education and Training},
+	Title = {Mathematical Modelling and the General Mathematics Syllabus},
+	Year = {2000}}
+
+@manual{price:2006,
+	Author = {James F. Price},
+	Date-Added = {2014-08-23 20:36:49 +0000},
+	Date-Modified = {2014-08-23 20:38:02 +0000},
+	Organization = {Woods Hole Oceanographic Institution},
+	Title = {Dimensional Analysis of Models and Data Sets: Similarity Solutions and Scaling Analysis},
+	Year = {2006}}
+
+@manual{gleich:2005,
+	Author = {David Gleich},
+	Date-Added = {2014-08-22 16:25:26 +0000},
+	Date-Modified = {2014-08-22 16:26:09 +0000},
+	Organization = {Self published},
+	Title = {Finite Calculus: A Tutorial for Solving Nasty Sums},
+	Year = {2005}}
+
+@manual{aip:1990,
+	Author = {AIP Publication Board},
+	Date-Added = {2014-08-22 16:19:10 +0000},
+	Date-Modified = {2014-08-22 16:19:10 +0000},
+	Edition = {4th},
+	Organization = {American Institute of Physics},
+	Title = {AIP Style Manual},
+	Year = {1990}}
+
+@book{houston:2009,
+	Author = {Kevin Houston},
+	Date-Added = {2014-08-22 14:55:30 +0000},
+	Date-Modified = {2014-08-22 14:56:58 +0000},
+	Publisher = {Cambridge University Press},
+	Title = {How to Think Like a Mathematician -- A Companion to Undergraduate Mathematics},
+	Year = {2009}}
+
+@article{hestenes:1987,
+	Author = {David Hestenes},
+	Date-Added = {2014-08-21 17:10:58 +0000},
+	Date-Modified = {2014-08-21 17:12:10 +0000},
+	Journal = {Am. J. Phys.},
+	Number = {5},
+	Pages = {pp 440-454},
+	Title = {Toward a modeling theory of physics instruction},
+	Volume = {55},
+	Year = {1987}}
 
 @misc{denker:notation,
 	Author = {John Denker},
