--- a/prob-solving/aux/preambule.sty
+++ b/prob-solving/aux/preambule.sty
@@ -84,64 +84,43 @@
 
 %%% Floats
 %
-% Floats width
+\newcommand{\docfloatwidth}{0.95\textwidth} %
 %
-\providecommand*{\docfloatwidth}{0.95\textwidth}%
-
-% Table headline
+% Tables
 %
-\providecommand*{\tabhead}[1]{{\spacedlowsmallcaps{#1}}}%
-
-% Table element centered
+\providecommand*{\tabhead}[1]{{\spacedlowsmallcaps{#1}}} % Table headline
+\providecommand*{\TEC}[1]{\multicolumn{1}{c}{#1}}        % Table element centered
 %
-\providecommand*{\TEC}[1]{\multicolumn{1}{c}{#1}}%
-
-% ------------------------------------------------------------- PreTable
-% \docpretable{position}{size}{cols}%
-% position: bthH. size: 0.9\textwidth. cols: llcp{6mm}
-% use: \docfloatwidth whenever possible!
-% NOTE: does not include \toprule
-\providecommand*{\docpretable}[3]{%
-    \begin{table}[#1]%
-      \capstart
-      \begin{center}
-        \footnotesize%
-        \begin{tabularx}{#2}{#3}%
-      \end{center}
-}%
-
-% ------------------------------------------------------------ PostTable
-% \end{tabularx}
-% \docposttable{caption}{caption}{label}
-% include: \end{tabularx}%
-\providecommand*{\docposttable}[3]{%
-% \end{tabularx}%
-      \normalsize\caption[#1]{#2}\label{#3}%
-    \end{table}%
-}%
-% ------------------------------------------------------------- EndTable
-
-% --------------------------------------------------------------- Figure
 %
-% position: bthH. size:width=0.5\textwidth. file:location+filename.pdf
-% caption. label:fig:wec
-% use: \docfloatwidth whenever possible!
-% \docfigure{position}{size}{file}%
-%   {caption}%
-%   {caption}%
-%   {label}%
-\providecommand*{\docfigure}[6]{%
-    \begin{figure}[#1]%
+% Figures
+%
+\providecommand*{\docfigure}[6]{
+    \begin{figure}[#1]
       \capstart
         \begin{center}
           \includegraphics[#2]{#3}
         \end{center}
-      \caption[#4]{#5}%
-    \label{#6}%
-\end{figure}%
-}% end figure
+      \caption[#4]{#5}
+    \label{#6}
+\end{figure}
+}
 %
+% --------------------------------------------------------------- Figure
+% pos.: bthH. size: width=0.5\textwidth. file:./graph/fname.pdf
+% caption. label:fig:wec
+% \docfigure{position}{size}{file}{caption}{caption}{label}
 % ------------------------------------------------------------ EndFigure
+%
+% --------------------------------------------------------------- Table
+%\begin{table}\capstart\begingroup\footnotesize\begin{center}
+%  \begin{tabularx}{0.5\textwidth}{ccc}
+%    %
+%    % Table here: use \toprule, \midrule, \endrule
+%    %
+%  \end{tabularx}\end{center}\endgroup\normalsize
+%  \caption[short]{long}\label{tab:}
+%\end{table}
+% ------------------------------------------------------------- EndTable
 
 %%% Versions
 %
