--- a/prob-solving/doc/example.tex
+++ b/prob-solving/doc/example.tex
@@ -1,6 +1,12 @@
 \chapter{\docTitle}
 %
-To illustrate various problem solving techniques, we will analyze the motion of a charged particle using Newtonian Physics. We will do so by showing various math and physics methods in different levels of sophistication: guessing, dimensional analysis, approximations and analytic techniques. Finally, we present a final wrapped-up solution.
+\docepigraph{The sciences do not try to explain, they hardly even try to interpret, they mainly make models. By a model is meant a mathematical construct which, with the addition of certain verbal interpretations, describes observed phenomena. The justification of such a mathematical construct is solely and precisely that it is expected to work.}{von Neumann}{\citep{vonneumann:wikiquote}}
+%
+To illustrate various problem solving techniques, we
+%
+\mquote{Since I like to keep things informal, if I say \scare{we} in the text, I really mean you and I.}{\cite[p. 2]{gleich:2005}}
+%
+will analyze the motion of a charged particle using Newtonian Physics. We will do so by showing various math and physics methods in different levels of sophistication: guessing, dimensional analysis, approximations and analytic techniques. Finally, we present a final wrapped-up solution.
 
 one has to assume, derive and test the model. The issue is strengthened in design.
 
@@ -10,21 +16,24 @@ one has to assume, derive and test the model. The issue is strengthened in desig
 In professional work, seldom does one find a \scare{well-posed problem}, where all the problem data, the information regarding...  one has to work towards that goal: to well pose a problem (well posed problems have more chances to find a solution).
 
 However, herein we will not be concerned by posing a problem, we will rather take one from a book (the reference exercise) and illustrate the ideas on how to solve problems by applying different techniques to solve such an exercise.
+%
+\mquote{He who seeks for methods without having a definite problem in mind seeks in the most part in vain.}{\cite{hilbert:quotes}}
+%
 
 
-\subsection{Reference exercise}\label{sec:reference}
+\subsection{Reference exercise}\label{sec:referenceexercise}
 %
-The reference exercise comes from \cite[chap. 1]{thorne:2011}, from the \book{Particle Kinetics and Lorentz Force in Geometric Language} section. Therein, geometric ideas, \via the \fact{geometric principle},
+The reference exercise comes from the \book{Particle Kinetics and Lorentz Force in Geometric Language} section in \cite[chap. 1, p. 8]{thorne:2011}. Therein, geometric ideas, \via the \fact{geometric principle},
 %
-~\mnote{the laws of physics must all be expressible as geometric [\dots] relationships between geometric objects [\dots], which represent physical entities. \cite[part I, p. iii]{thorne:2013}}
+~\mnote{The laws of physics must all be expressible as geometric [\dots] relationships between geometric objects [\dots], which represent physical entities. \cite[part I, p. iii]{thorne:2013}}
 %
 are applied to Newtonian physics. 
 
-We quote such an exercise verbatim:
+I quote the exercise verbatim:
 %
 \begin{description}
 %
-\item[Energy change for charged particle] \theorem{Without introducing any coordinates or basis vectors, show that, when a particle with charge $\echarge$ interacts with electric and magnetic fields, its energy changes at a rate}
+\item[Energy change for charged particle] \theorem{Without introducing any coordinates or basis vectors, show that, when a particle with charge $q$ interacts with electric and magnetic fields, its energy changes at a rate}
 %
 \begin{equation}\label{eq:referenceequation}
   dE/dt = \mathbf{v}\iprod\mathbf{E}\,.
@@ -35,9 +44,9 @@ We quote such an exercise verbatim:
 In \cref{eq:referenceequation}, $E$ represents the particle's kinetic energy, $t$ (Newton's) universal time, $\mathbf{v}$ the particle's velocity and $\mathbf{E}$ an electric field.
 
 
-\subsection{Reference exercise analysis}
+\subsection{Reference exercise analysis}\label{sec:referenceanalysis}
 %
-The reference exercise asks to derive a formula. As a healthy habit, \emph{always} check formula correctness by  \lingo{dimensional analysis}.
+The reference exercise asks us to match (derive) a given formula. Thus, it is better to be sure that such a formula is derivable. As a healthy habit, then, get used to \emph{always} check formula correctness by the simplest (but powerful) analytic method we have on physics: \lingo{dimensional analysis}.
 %
 \mquote{Upon seeing any equation, first check its dimensions [\dots]. If all terms do not have identical dimensions, the equation is not worth solving -- a great savings of effort.}{\cite[p. 42]{sanjoy:2010}}
 %
@@ -47,22 +56,24 @@ Since we are dealing with dynamics and electromagnetism, choose the dimensionall
 %
 \begin{align*}
 %
-  \dfrac{\dim\dx E}{\dim\dx t} &= \dfrac{\phdim{FL}}{\phdim{T}}\,, & \eqtxt{LHS of \cref{eq:referenceequation}} \\
+  \dfrac{\dim\dx E}{\dim\dx t} &= \dfrac{\phdim{FL}}{\phdim{T}} & \eqtxt{LHS of \cref{eq:referenceequation}} \\
+  %
+  &\not= & \\
   %
   \dim{\mathbf{v}}\iprod\dim{\mathbf{E}} &= \dfrac{\phdim{FL}}{\phdim{QT}}\,. & \eqtxt{RHS of \cref{eq:referenceequation}}
 %
 \end{align*}
 %
-As we can see, dimensions do not match; \viz the additional $\phdim Q$ in the RHS. So \cref{eq:referenceequation} in wrong! As an error pointer, see that in the exercise statement the particle's electric charge $\echarge$ is given and a magnetic field is mentioned; however, neither appear in \cref{eq:referenceequation}.
+As we can see, dimensions do not match; \viz the additional $\phdim Q$ in the RHS. So \cref{eq:referenceequation} in wrong! As an error pointer, see that in the exercise statement the particle's electric charge $q$ is given and a magnetic field is mentioned; however, neither appear in \cref{eq:referenceequation}.
 
 
 \subsection{Reference exercise reformulation}
 %
-Since the conclusion of the reference exercise, \cref{eq:referenceequation}, is wrong, do we still have to solve it? Yes, because the premises remain valid. We have just to ditch. This mean to reformulate the statement. This reformulation can be done by changing the \scare{show that} bit to something different. Let's try:
+Since the conclusion of the reference exercise, \cref{eq:referenceequation}, is wrong, do we still have to solve it? Yes, because the phenomenon still exists (consider, for instance, an electron moving in the field created by a proton). Moreover, we would like to know where exactly the derivation of the reference exercise went astray. To correct the exercise, we have just to ditch the equation. But, removing it also means to reformulate the statement. This reformulation can be done by replacing the \scare{show} bit for \scare{find}. Let's try:
 %
 \begin{description}
 %
-\item[Energy change for charged particle] \theorem{Without introducing any coordinates or basis vectors, find the energy change rate $dE/dt$ of a particle with charge $\echarge$ when it interacts with an electric $\mathbf{E}$ and magnetic fields.}
+\item[Energy change for charged particle] \theorem{Without introducing any coordinates or basis vectors, find the energy change rate $dE/dt$ of a particle with charge $q$ when it interacts with an electric field $\mathbf{E}$ and a magnetic field.}
 %
 \end{description}
 %
@@ -71,30 +82,149 @@ In this way, we don't have to worry about any formula to match. It is us who has
 
 \subsection{Working exercise}\label{sec:workingexercise}
 %
-The reference exercise was analyzed and reformulated. However, there are some additional changes I would like to make before having a working exercise:
+The reference exercise was analyzed and reformulated to avoid its wrong conclusion. We could work with the reformulated reference exercise. However, there are some additional changes I would like to make before having a working exercise:
 %
 \begin{itemize}
 %
-\item Remove data from the statement and relax its hypotheses. Then, the exercise becomes more general.
+\item I will generalize the statement by relaxing hypotheses and removing data. Specifically, I will remove the recommendation of not using coordinates nor basis vectors;
 %
-\item Change notation, following \cite{denker:notation}. In the reference exercise, $E$ is used to represent kinetic energy and $\mathbf{E}$ to represent electric field. Although distinguishable in printed text, this notation posses issues when working on paper. I \emph{could} decorate vectors using an arrow, like $\vec{E}$; but I'm not going to. I don't like how arrows look like. Instead I'll use different symbols for different quantities and use minuscules to typeset variables.
+~\mnote{although this is an important reminder of better working with geometric objects, it limits generalization.}
 %
-\item Finally, make the statement self contained. I like how mathematicians present propositions: they are a bit more pedantic and it means more typing but the result is a self contained statement.
+will relax the \scare{particle} model by hypothesizing a \scare{body}, $\body$, instead; will replace the data \scare{charge $q$}, \scare{electric field $\mathbf{E}$} and \scare{magnetic field} with \scare{electrically charged}. These replacements will correct the lack of $q$ and the magnetic field in \cref{eq:referenceequation} -- perhaps they are not needed.
+%
+\item Notice that in the reference exercise the particle interacts with fields. However, it is not mentioned the \emph{agent} that creates the fields.
+%
+\mquote{[On Newton's laws] the laws fail to explicitly state that \emph{every force has an agent}, that every force is a binary function describing the action of an agent on an object.}{\cite{hestenes:1987}}
+%
+This is a serious omission that perpetuates the \lingo{impetus believe}: \scare{that a force can be imparted to an object and act on it independently of any agent} \cite{hestenes:1987}. It is particularly notorious in the reference exercise: we are told, in electromagnetic theories, that any charged particle creates electric and magnetic fields. So, is the $\mathbf{E}$ in the reference exercise due to the moving particle or to another one? We \emph{interpret} the statement as \scare{there is an agent, different from the moving particle, that creates the electric and magnetic fields with which the moving particle interacts}. We correct this lack of agent by adding a second electrically charged body, $\body'$.
+%
+\item Finally, I like how mathematicians present propositions. They explicitly write two main parts: the premises (or hypotheses) and the conclusion (or question) in a way that nothing is left to interpretation. In such a fashion, the problem becomes \lingo{self-contained}. Self-contained statements tend to be a bit long and sound pedantic; but the result pays off in understanding.
 %
 \end{itemize}
 
-With these changes in mind, we have a working version of the exercise:
+With these changes in mind, we present a working version of the exercise:
 %
 \begin{description}
 %
-\item[Energy change for a charged body] \theorem{Consider an electrically charged body $\body$ moving in the present of a non-moving electrically charged body $\body'$. Find the temporal change of the energy of $\body$.}
+\item[Energy change for a charged body] \theorem{Consider an electrically charged body $\body$ moving toward an electrically charged body $\body'$. Then, find $\body$ temporal change of energy.}
 %
 \end{description}
+
+
+\section{Working exercise solution}
+%
+Now we are ready to work on the exercise. But, wait! Without you noticing it, we already stared solving the exercise. We started by applying two of my favorite methods: \lingo{dimensional analysis} and \lingo{abstraction}. Dimensional analysis was briefly treated in \cref{sec:referenceanalysis} and will be shown more fully in \cref{sec:dimanalysis}. In the next section, thus, I will explain abstraction.
+
+
+\subsection{Abstraction}
+%
+\mquote{The problem statement should be very general and free of as much data as possible, as later stages in the modelling process will consider and gather what is needed.}{\cite[p. 8]{nsw:2000}}
+%
+As seen in \cref{sec:workingexercise}, abstraction is the process of relaxing hypotheses and removing data to leave only the bare bones of an statement. There are three main reasons to do this:
+%
+\begin{enumerate}
+%
+\item a neater, crisper, easier to picture exercise statement, due to the lack of data and suggested notation -- \confer the reference exercise statement, \cref{sec:referenceexercise}, with the working exercise statement, \cref{sec:workingexercise};
+%
+\item as the statement becomes more abstract, keywords that show governing effects begin to emerge;
+%
+\item as the governing effects appear, theories can be proposed to model those effects. Then, we have to make assumptions and filled out data to satisfy theories frameworks. These latter steps engage us in a better understanding of the physics behind the model and its limitations.
+%
+\end{enumerate}
+
+For instance, in the case of the working exercise, note the keywords \emph{electrically charged} and \emph{moving}. They point to a theory of electromagnetism and to a theory of motion: an electrodynamic theory. We can now choose any of the available ones. For motion, we could choose Newton's, Lagrange's, Hamilton's, Einstein's or quantum theories; for electromagnetism, classical, quantum, field theories and so on.
+%
+% --------------------------------------------------------------- Figure
+%
+% position: bthH. size:width=0.5\textwidth. file:location+filename.pdf
+% caption. label:fig:wec
+% use: \docfloatwidth whenever possible!
+\docfigure{bt}{width=0.9\textwidth}{./graph/class-quantum.pdf}{Classical and quantum physics}
+{The relationship of the three frameworks for classical physics (on right) to four frameworks for quantum physics (on left).         Each arrow indicates an approximation. All other frameworks are approximations to the ultimate laws of quantum gravity (whatever   they may be -- perhaps a variant of string theory). \cite[chap. 1, p. iv]{thorne:2013}}
+{fig:classicalquantumphysics}
+%
+% ------------------------------------------------------------ EndFigure
+%
+%
+% --------------------------------------------------------------- Figure
+%
+% position: bthH. size:width=0.5\textwidth. file:location+filename.pdf
+% caption. label:fig:wec
+% use: \docfloatwidth whenever possible!
+%\docfigure{bt}{width=1.2\textwidth}{./graph/class-physics.pdf}{Classical physics}
+%{The three frameworks and arenas for the classical laws of physics, and their relationship to each other. \cite[chap. 1, p. iii]{thorne:2013}}{fig:classicalphysics}
+%
+% ------------------------------------------------------------ EndFigure
 %
 
+For the present case, in order to retain the spirit of the reference exercise, we choose Newtonian physics as the main physical framework in which to work. (The relationships among several physical theories is presented in \cref{fig:classicalquantumphysics}.)
+
+
+\subsection{Notes on notation}
+%
+\mquote{A name is not the same as an explanation. Do not expect the structure of a name or symbol to tell you everything you need to know. Most of what you need to know belongs in the legend. The name or symbol should allow you to look up the explanation in the legend.}{\cite{denker:notation}}
+%
+Often, scalars, vectors and other mathematical objects are typeset with different font faces for each math type. Although this convention works fine for printed texts, it posses issues when working on paper. See, for instance, that, in the reference exercise, $E$ is used to represent energy and $\mathbf{E}$ to represent electric field. Now, how to distinguish between $E$ and $\mathbf{E}$ with pen on paper without both e's getting confused?
+
+The alternatives, then, are to decorate objects, like using arrows on top of letters for vectors -- $\vec E$ for electric field -- or to use majuscules and minuscules to distinguish objects. Herein I \emph{could} follow any of such conventions, but I am not going to. I do not like how arrows, bold typefaces or majuscules look like. Instead I will use different symbols for different quantities and minuscules to typeset variables; for instance, $\force$ would represent force, $\efield$ electric field, $\ekin$ kinetic energies and so forth. Even though this latter convention appears error prone, it constantly reminds me to be careful when working with mixed types of math objects, for I do not rely on typographical decoration anymore.
+
+Finally,
+%
+\mquote{Typography exists to honor content.}{\cite[p. 17]{brinhurst:2004}}
+%
+in the writer's opinion, besides honoring math objects in lieu of making notation to stand out, this flat, undecorated typography seems to give equations an air of elegance and simplicity unmatchable by heavy decoration. Consider, for example, how Newton's second law of motion looks like undecorated
+%
+\mquote{But in our opinion truths of this kind should be drawn from notions rather than from notations.}{\cite{gauss:wikiquote}}
+%
+\beq
+  \force = \mass\acc\,,
+\eeq
+%
+with $\vec F = m\vec a$ or $\mathbf{F} = m\mathbf{a}$, its decorated and bold counterparts.
+
+
+\subsection{Adoption of physical framework}
+%
+We adapt Lamport's math proof style \cite{lamport:1993,lamport:2012} to physics, \via the model theory \cite{hestenes:1987}.
+%
 \mquote{Before developing the necessary mathematics, survey the crucial physics.}{\cite[p. 11]{lindner:2011}}
 %
-\section{Guessing the solution}
+\begin{description}
+%
+\item[Theory] Newtonian physics: Newtonian electrodynamics.
+%
+\item[Object] body $\body$ modeled as a moving particle: (state variables, object variables, ...) with charge $\echarge$ and mass $\mass$.
+%
+\item[Agent] body $\body'$ modeled as a non-moving particle.
+%
+\item[Dynamic laws]
+%
+\begin{align}
+  %
+  \mom &= \mass\vel & \eqtxt{Lin. momentum def.} \\
+  %
+  \force &= \dt\mom & \eqtxt{Newton's second} \\
+  %
+  2\ekin &= \mass\vel & \eqtxt{Kin. energy definition}
+  %
+\end{align}
+%
+\item[Interaction laws]
+%
+\begin{align}
+  \force &= \echarge\parth{\efield + \vel\cprod\mfield} & \eqtxt{Lorentz force}
+\end{align}
+%
+\item[Interpretation] ...
+%
+\item[QED]
+%
+\end{description}
+
+Notice that interpretation forms a part of the proof!
+
+
+\subsection{Interpretation of the solution}
 %
 As a first approximation to the solution, instead of working with the general case, we go to an specific example by considering the moving particle to be an electron and the electric field to be originated by a proton. The dynamics is described by \lingo{Lorentz force law}.
 
@@ -111,13 +241,17 @@ Finally, because an electron moving towards a proton is an example of a more gen
 We expect this guessed equation to be obtained by formal methods.
 
 
-\section{Dimensional analysis}
+\subsection{Dimensional analysis}\label{sec:dimanalysis}
 %
 For the next solution, we will use \lingo{dimensional analysis} to determine the \emph{functional form} of the model to the phenomenon. To find the functional form of the physical model by means of dimensional analysis, follow the steps:
 %
 \begin{itemize}
 %
-\item Since the phenomenon belongs to electromagnetism, use the set $\elset{\phdim F, \phdim L, \phdim T, \phdim Q}$ of \emph{four} dimensionally independent dimensions.
+%\item Since the phenomenon belongs to electromagnetism, use the set $\elset{\phdim F, \phdim L, \phdim T, \phdim Q}$ of \emph{four} dimensionally independent dimensions.
+%
+\item Experience has shown us that to analyze geometric problems we need only the dimension of length, $\phdim L$; to analyze kinematic problems we need add time $\phdim T$; to analyze dynamics, we can add either mass $\phdim M$ or force $\phdim F$. We cheese
+%
+\item Physical model: a list of the relevant variables: \vide \cref{tab:physicalmodelelectricparticle}, \cite[p. 4]{price:2006}.
 %
 ~\mnote{We use this set because it doesn't include mass as we guessed so in the previous section.}
 %
@@ -143,6 +277,37 @@ where $\fdim$ is an \emph{unknown} dimensionless functions of dimensionless argu
 In the last equation, the precise form of the function $\fdim$ must be determined by experimentation or by analytic means. However, dimensional analysis confirms our suspicion: $\dt\ekin\sim\ekin/t\sim\echarge\efield\vel$; \ie, the product $\echarge\efield\vel$ \scare{lives upstairs} in the equation. 
 
 Finally, the function $\fdim$ should be equal to a dimensionless parameter $\kdim$ if our guess is to be correct. We will keep $\fdim$, nevertheless, for it may be that our guess is incorrect.
+%
+% --------------------------------------------------------------- Table
+%
+\begin{table}\capstart\begingroup\footnotesize\begin{center}
+  \begin{tabularx}{0.60\textwidth}{lcX}
+%
+\toprule
+%
+\tabhead{Physical quantity} & \tabhead{Symbol} & \tabhead{Dimensions} \\
+%
+\midrule
+%
+$\point$ electric charge  & $\echarge$ & $\phdim Q$ \\
+$\point$ kinetic energy   & $\ekin$    & $\phdim{FL}$ \\
+$\point$ velocity         & $\vel$     & $\phdim{L/T}$ \\
+%
+$\point'$ electric field  & $\efield'$ & $\phdim{F/Q}$ \\
+$\point'$ magnetic field  & $\mfield'$ & $\phdim{FT/LQ}$ \\
+%
+Time & $t$ & $\phdim T$ \\
+%
+\bottomrule
+%
+  \end{tabularx}\end{center}\endgroup\normalsize
+  \caption[Physical model: electric phenomenon]
+  {Physical model for an electrically charged particle $\point$ moving towards an electrically charged particle $\point'$}
+  \label{tab:physicalmodelelectricparticle}
+\end{table}
+%
+% ------------------------------------------------------------- EndTable
+%
 
 
 \section{Approximate methods}
@@ -191,6 +356,14 @@ $\parth{\echarge\vel\cprod\mfield}\iprod\vel\sim\echarge\vel\mfield\vel = 0$, si
 which gives the temporal change of kinetic energy.
 
 The equation found by approximate means agrees with our guess and with dimensional analysis, increasing thus our confidence in understanding the phenomenon! Besides, all the previous methods have cleared the derivation plan: i) find $\dt\ekin$ from $\ekin$; ii) find the equation of motion by using the definition of linear momentum, by equating Newton's law to Lorentz law and by leaving $\mass\vel$ on one side and iii) finally, plug in the equation of motion onto $\dt\ekin$ and use vectorial identities to arrive at the final solution.
+
+[Last equation is fine, but we can do better. Notice that both sides have the same dimensions and that the inner product of $\efield$ and $\vel$, two vectors, is a scalar. Then, we can present the last equation in its scaled version:
+%
+\beq
+  \dt\ekin/\echarge\efield\iprod\vel\sim 1\,.
+\eeq
+%
+The last equation has two advantages: it's scaled (dimensionless and of order unity) and it stresses the scalar character the solution.]
 
 
 \section{Wordy derivation}
@@ -294,52 +467,71 @@ The formal solution was obtained from the derivation of the wordy solution. They
 
 \section{Math proof}
 %
-... \cite[chap. 1]{lehman:2011}
+... \cite[chap. 1]{lehman:2011} ... \cite{houston:2009}.
 
-Consider a body $\body$ with electric charge $\echarge$ moving with velocity $\vel$ through a constant electric field of strength $\efield$. The formula
+Consider two electrically charged bodies $\body$ and $\body'$. Consider $\body$ moving towards $\body'$. Let $\echarge$ and $\vel$ represent $\body$ electric charge and velocity and let $\efield$ represent $\body'$ electric field. Then, the formula
 %
 \beq
   \dt\ekin = \echarge\efield\iprod\vel
 \eeq
 %
-models the body temporal change of kinetic energy $\dt\ekin$.
+models $\body$ temporal change of kinetic energy $\dt\ekin$.
 
 
 \subsection{Proof scratch work}
 %
 Suppose we didn't... Two column style: left-hand side for calculations, right-hand side for explanations. We use the approx. method solution style.
-
-Use Newton's and classical electromagnetism theories. Assume the body is a particle. 
 %
-\begin{align*}
+% --------------------------------------------------------------- Table
 %
-  \force &\sim \mass\vel/t                           & \eqtxt{Newton's second} \\
-  \force &\sim \echarge\parth{\efield + \vel\mfield} & \eqtxt{Lorentz force} \\
-  \implies
-  \mass\vel/t &\sim \echarge\parth{\efield + \vel\mfield} & \eqtxt{equation of motion}\\
-  \ekin &\sim\mass\vel^2 & \eqtxt{kin energy definition} \\
-  \implies
-  \dt\ekin &\sim\mass\vel & \eqtxt{time derivative} \\
+\begin{table}\capstart\begingroup\footnotesize\begin{center}
+  \begin{tabularx}{0.95\textwidth}{cll}
 %
-\end{align*}
+\toprule
+\multicolumn{3}{l}{Assume: Newtonian physics. Model particles: $\point$ and $\point'$} \\
+\midrule
 %
-
+\TEC{Id.} & \TEC{\tabhead{Statements}} & \TEC{\tabhead{Justifications}} \\
+%
+\midrule
+\multicolumn{3}{c}{Kinetic energy} \\
+\midrule
+%
+1 & $\ekin\sim\mass\vel^2$ & definition \\
+%
+2 & $\implies\ekin/t\sim\mass\vel^2/t$ & time \scare{derivative} of (id.) 1 \\
+%
+\midrule
+\multicolumn{3}{c}{Forces} \\
+\midrule
+%
+3 & $\mom\sim\mass\vel$ & momentum def. \\
+4 & $\force\sim\mom/t$ & Newton's second \\
+5 & $\implies\force\sim\mass\vel/t$ & $3 = 5$ (id.'s) \\
+6 & $\force'\sim\echarge\parth{\efield' + \vel\mfield'}$ & Lorentz force \\
+7 & $\implies\mass\vel/t\sim\echarge\parth{\efield' + \vel\mfield'}$ & motion equation: $5 = 6$ (id.'s) \\
+8 & $\implies\mass\vel^2/t\sim\echarge\parth{\efield' + \vel\mfield'}\vel$ & 7 (id.) times $\vel$ \\
+%
+\midrule
+\multicolumn{3}{c}{Conclusion} \\
+\midrule
+%
+9 & $\ekin/t\sim\echarge\parth{\efield' + \vel\mfield'}\vel$ & $8 = 2$ (id.'s), \via $\mass\vel^2/t$ \\
+10 & $\dt\ekin\sim\echarge\parth{\efield' + \vel\mfield'}\vel$ & from $\ekin/t\sim\dt\ekin$ \\
+11 & \qed & end. answer: 10 (id.) \\
+%
+\bottomrule
+%
+  \end{tabularx}\end{center}\endgroup\normalsize
+\caption[Proof sketch electric]{Sketch work to model the electrically charged bodies interaction. The left column contains the statements (formulas) being used, the right column their justifications \cite[p. 3]{lamport:1993}. Note the usage of approximations throughout the derivation -- specially the secant approximation for derivatives \cite[p. 38]{sanjoy:2010} --, of apostrophes to differentiate $\point$ quantities from $\point'$ quantities and of geometric algebra \cite{hestenes:2003}.}\label{tab:sketchworkelectric}
+\end{table}
+%
+% ------------------------------------------------------------- EndTable
 
 
 
 \subsection{Lamport's proof style}
 %
-Lamport's proof style \cite{lamport:1993,lamport:2012}.
-
-\begin{proof}
-%
-\begin{description}
-%
-\item[Proof sketch] we begin by
-%
-\end{description}
-%
-\end{proof}
 
 
 \subsection{Traditional proof style}
@@ -354,3 +546,40 @@ the answer to the problem was wrong in \cite{thorne:2011} and then corrected in 
 quote: nuilluis in verba :).
 
 
+\section{Final remarks}
+%
+The method herein presented is far from being perfect. But it has worked nicely for me, not only when solving textbook exercises, but also in personal research and professional work. In textbooks, authors can write shorter, open statements, because the context given by the surrounding text allows them to do so. In real research, however, one never finds a textbook problem with a back-of-the-book solution.
+
+The most important aspects on solving exercises are, according to my experience:
+%
+\begin{itemize}
+%
+\item having a problem that interests me;
+%
+\item working hard on having a good description of the problem;
+%
+\item making assumptions.
+%
+\end{itemize}
+%
+If all of the previous premises are satisfied, I ....
+
+My working methodology is heavily influenced by John Denker, David Hestenes and Sanjoy Mahajan's ideas.
+
+David Hestenes and Kip Thorne ideas on working with the geometric principle...
+
+Math proofs from Houston.
+
+the writing style comes from AIP Style Manual, Denker, Linder, Mahajan and mainly Fourier (theory of heat!).
+
+
+
+
+
+Some things...
+%
+~\mquote{The old taboo against using the first person in formal prose has long been deplored by the best authorities and ignored by some of the best writers. [\dots] A single author should also use \scare{we} in the common construction that includes the reader.}{\cite[p. 14]{aip:1990}}
+%
+
+
+$\point$, $\espace$
