--- a/prob-solving/aux/preambule.sty
+++ b/prob-solving/aux/preambule.sty
@@ -1,7 +1,7 @@
 % preambule
 % general commands, environments and macros
 
-\ProvidesPackage{aux/preambule}[21/08/2014 preambule macros and commands (rimbaudcode)]
+\ProvidesPackage{aux/preambule}[27/08/2014 preambule macros and commands (rimbaudcode)]
 
 % margin notes
 %
@@ -108,18 +108,22 @@
 % --------------------------------------------------------------- Figure
 % pos.: bthH. size: width=0.5\textwidth. file:./graph/fname.pdf
 % caption. label:fig:wec
-% \docfigure{position}{size}{file}{caption}{caption}{label}
+%
+%\docfigure{position}{size}{file}{caption}{caption}{label}
+%
 % ------------------------------------------------------------ EndFigure
 %
 % --------------------------------------------------------------- Table
+%
 %\begin{table}\capstart\begingroup\footnotesize\begin{center}
 %  \begin{tabularx}{0.5\textwidth}{ccc}
 %    %
 %    % Table here: use \toprule, \midrule, \endrule
 %    %
-%  \end{tabularx}\end{center}\endgroup\normalsize
+%  \end{tabularx}\end{center}\endgroup%\normalsize
 %  \caption[short]{long}\label{tab:}
 %\end{table}
+%
 % ------------------------------------------------------------- EndTable
 
 %%% Versions
