--- a/prob-solving/doc/references.bib
+++ b/prob-solving/doc/references.bib
@@ -2,12 +2,37 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-08-24 20:59:19 +0200 
+%% Created for art at 2014-08-28 23:47:20 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{hartl:2010,
+	Author = {Michael Hartl},
+	Date-Added = {2014-08-28 21:46:53 +0000},
+	Date-Modified = {2014-08-28 21:47:20 +0000},
+	Title = {The Tau Manifesto},
+	Year = {2010}}
+
+@manual{francis:1999,
+	Author = {Paul Francis},
+	Date-Added = {2014-08-28 18:25:12 +0000},
+	Date-Modified = {2014-08-28 18:26:22 +0000},
+	Organization = {ANU Dept. of Physics},
+	Title = {"Back-of-the-Envelope" Calculations Or: The Seven Habits of Highly Effective Astronomers},
+	Year = {1999}}
+
+@book{sanjoy:2008,
+	Author = {Sanjoy Mahajan},
+	Date-Added = {2014-08-26 09:01:32 +0000},
+	Date-Modified = {2014-08-26 09:02:47 +0000},
+	Publisher = {MIT},
+	School = {MIT},
+	Series = {OpenCourseWare},
+	Title = {The Art of Approximation in Science and Engineering},
+	Year = {2008}}
 
 @manual{nsw:2000,
 	Author = {Department of Education and Training},
