--- a/prob-solving/prob-solving.tex
+++ b/prob-solving/prob-solving.tex
@@ -30,6 +30,7 @@
 
   %\include{doc/summary}
   \include{doc/example}
+  \include{doc/things}
 
   \phantomsection
   \bibliographystyle{aipnum4-1}\label{biblio}
@@ -42,6 +43,7 @@
   \bibliography{doc/references}
 
   \appendix
+  %\include{doc/ga}
 
   \include{aux/revision} % Update!
 
