--- a/error-propagation/auxs/preambule.tex
+++ b/error-propagation/auxs/preambule.tex
@@ -197,3 +197,10 @@
 %    \end{figure}%
 %}% end tikpzfigure
 %%
+
+% siunitx setup
+%
+\sisetup{
+  input-symbols = \pi\tau,
+  exponent-product = \cdot  % use cdot instead of times in sci notation
+}
