--- a/error-propagation/doc/error-propagation.tex
+++ b/error-propagation/doc/error-propagation.tex
@@ -17,7 +17,8 @@ Consider the quantities $a_k$s, with measured values $\mvalue a_k$s and measured
 whereas its maximum uncertainty by
 %
 \beq
-    \muncer y = \ssum{k}{\abs\ipd{a_k} y\muncer a_k} + \ssum{l}{\abs\ipd{b_l} y\sstdev_{b_l}}\,,
+    \muncer y = \ssum{k}{\abs\left(\ipd{a_k}y\right)\muncer a_k} 
+                + \ssum{l}{\abs\left(\ipd{b_l}y\right)\sstdev_{b_l}}\,,
 \eeq
 %
 where $\abs x$ represents the absolute value of $x$.
@@ -44,7 +45,8 @@ From the pendulum equation, isolate $\grav$ to have
 Then, the max uncertainty of $\grav$ is
 %
 \beq
-    \muncer\grav = \abs\ipd{\length}\grav\muncer\length + \abs\ipd{\period}\grav\sstdev_\period
+    \muncer\grav = \abs\left(\ipd{\length}\grav\right)\muncer\length 
+                   + \abs\left(\ipd{\period}\grav\right)\sstdev_\period
                  = 4\pi^2\dfrac{1}{\period^2}\muncer\length + 8\pi^2\dfrac{\length}{\period^3}\sstdev_\period\,.
 \eeq
 
@@ -66,5 +68,5 @@ Replace the given values in the $\grav$ equation and in the equation for its rel
                  &= 0.153823746668\,.
 \end{align*}
 
-Finally, the value for the free fall acceleration is $\grav/\si{m.s^{-2}} = 9.809 \pm 0.154$.
+Finally, the value for the free fall acceleration is $\grav/\si{m.s^{-2}} \sim \num{9.809 +- 0.154}$.
 
