--- a/monte-carlo/aux/minionstyle.sty
+++ b/monte-carlo/aux/minionstyle.sty
@@ -51,7 +51,7 @@
 \RequirePackage[all]{hypcap}     % correct hyperlink in floats
 
 %\RequirePackage[small,euler-hat-accent]{eulervm} % math font
-\RequirePackage{fontspec}                         % xetex
+\RequirePackage[no-math]{mathspec}                % oldstyle nums in math mode (look config. below)
 \RequirePackage{xunicode}                         % xetex
 \RequirePackage{xltxtra}                          % xetex
 
@@ -69,6 +69,12 @@
 % MinionPro
 %
 %\RequirePackage[OT1,small]{eulervm}                  % maths
+%
+% old numerals in math mode (depends on mathspec)
+% if (Digits,Latin) option is used, then the result is not pleasant :(
+% eg, $t$ is typeset in roman instead of italic!
+% I want only Digits to be affected
+\setmathsfont(Digits)[Numbers={OldStyle}]{MinionPro-Regular}
 %
 \setsansfont[Mapping=tex-text,Scale=0.9]{Myriad Pro} % sans
 \setmonofont[Mapping=tex-text,Scale=0.8]{Menlo}      % mono
